fixed the specs alignment issues

--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ img {
 }
 
 .product-badge {
-  padding: 2px 10px;
+  padding: 5px 10px;
   border-radius: 50px;
   font-family: "Inter", sans-serif;
   display: flex;
@@ -187,16 +187,14 @@ img {
   margin-top: 8px;
 }
 .not-working-inner {
-  padding: 0 10px 2px 10px;
+  padding: 2px 10px 2px 10px;
   background: #a7baca;
   border-radius: 50px;
-}
-.not-working-inner span {
   font-size: 13px;
   color: #fff;
   font-weight: 500;
-  /* line-height: 1em; */
 }
+
 .not-working-outer > div:nth-child(2) span {
   color: #fff;
   font-size: 13px;
@@ -220,7 +218,9 @@ img {
 }
 .products-specs .spec-img-container {
   width: 15px;
-  text-align: right;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .products-specs > div span {
   font-size: 13px;
